k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: volley
  namespace: volley
  labels:
    app: volley
spec:
  selector:
    app: volley
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
      appProtocol: http
